--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Integrate the ONDC (Open Network for Digital Commerce) Buyer App API to facilitate seamless order placement and management, enhancing user experience by enabling direct access to diverse merchants and services.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "Oxium",
   "license": "ISC",
